bug squashed

--- a/calcstyle.css
+++ b/calcstyle.css
@@ -21,6 +21,7 @@
 }
 
 ul{
+    
     list-style-type: none;
     text-align: center;
     font-size: large;
@@ -44,13 +45,12 @@ a:focus {
     text-decoration: none;
 }
 
-a:hover,
 a:active {
     text-decoration: none;
-    color: blue;
 }
 
 a {
+    text-align: center;
     text-decoration: none;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -65,8 +65,4 @@ a {
 }
 #darkmodeicon:hover{
    cursor: pointer;
-}
-
-#ulc{
-    color: red;
 }
